# WUTA-SIMULATOR

./: .gitignore  .gitmodules  AGENTS.md  README.md  start_simulator.sh
WUTA-FSD/: .gitignore  README.md  REFACTOR.md
WUTA-FSD/ros2_ws/: build_ws.sh  install路径修复记录.md  仿真器开发方案.md  仿真器开发方案_Gazebo版.md  编译修复记录.md  编译修复记录_环境迁移与package.xml修复.md  节点话题速查表.md
WUTA-FSD/ros2_ws/cmake/: FindMPI.cmake
WUTA-FSD/ros2_ws/install/: local_setup.sh  setup.sh
WUTA-FSD/ros2_ws/log/: latest_build  latest_list
WUTA-FSD/ros2_ws/src/common/autoware_msgs/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/common/wuta_msgs/: CMakeLists.txt  README.md  package.xml
WUTA-FSD/ros2_ws/src/common/wuta_tools/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/control/controller/: CMakeLists.txt  README.md
WUTA-FSD/ros2_ws/src/control/controller/config/: controller.yaml
WUTA-FSD/ros2_ws/src/control/controller/include/controller/: controller_node.hpp  pure_pursuit.hpp  twist_filter.hpp  vehicle_state.hpp
WUTA-FSD/ros2_ws/src/control/controller/src/: controller_node.cpp  pure_pursuit.cpp  twist_filter.cpp
WUTA-FSD/ros2_ws/src/localization/kiss_icp_wrapper/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/localization/kiss_icp_wrapper/config/: kiss_icp_hesai128.yaml
WUTA-FSD/ros2_ws/src/localization/localization_manager/: CMakeLists.txt  README.md  package.xml
WUTA-FSD/ros2_ws/src/localization/localization_manager/config/: ekf.yaml
WUTA-FSD/ros2_ws/src/localization/localization_manager/include/localization_manager/: localization_manager.hpp
WUTA-FSD/ros2_ws/src/localization/localization_manager/launch/: localization.launch.py
WUTA-FSD/ros2_ws/src/localization/localization_manager/src/: localization_manager.cpp
WUTA-FSD/ros2_ws/src/localization/ndt_localization/: CMakeLists.txt  README.md  package.xml
WUTA-FSD/ros2_ws/src/localization/ndt_localization/config/: ndt_localization.yaml
WUTA-FSD/ros2_ws/src/localization/ndt_localization/include/ndt_localization/: map_saver.hpp  ndt_localization.hpp
WUTA-FSD/ros2_ws/src/localization/ndt_localization/src/: map_saver.cpp  ndt_localization.cpp
WUTA-FSD/ros2_ws/src/mapping/cone_map_builder/: CMakeLists.txt  README.md
WUTA-FSD/ros2_ws/src/mapping/cone_map_builder/config/: cone_map_builder.yaml
WUTA-FSD/ros2_ws/src/mapping/cone_map_builder/include/cone_map_builder/: cone_map_builder.hpp
WUTA-FSD/ros2_ws/src/mapping/cone_map_builder/src/: cone_map_builder.cpp
WUTA-FSD/ros2_ws/src/perception/camera_detection/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/perception/detection_fusion/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/perception/lidar_detection/: CMakeLists.txt  README.md  package.xml
WUTA-FSD/ros2_ws/src/perception/lidar_detection/config/: lidar_detection.yaml
WUTA-FSD/ros2_ws/src/perception/lidar_detection/include/lidar_detection/: detector_base.hpp  dl_detector.hpp  lidar_detection_node.hpp  traditional_detector.hpp
WUTA-FSD/ros2_ws/src/perception/lidar_detection/src/: dl_detector.cpp  lidar_detection_node.cpp  traditional_detector.cpp
WUTA-FSD/ros2_ws/src/planning/: README.md
WUTA-FSD/ros2_ws/src/planning/boundary_detector/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/planning/boundary_detector/config/: boundary_detector.yaml
WUTA-FSD/ros2_ws/src/planning/boundary_detector/include/boundary_detector/: boundary_detector_node.hpp
WUTA-FSD/ros2_ws/src/planning/boundary_detector/include/hpl/: hpl_log.hpp  hpl_param.hpp
WUTA-FSD/ros2_ws/src/planning/boundary_detector/src/: boundary_detector_node.cpp
WUTA-FSD/ros2_ws/src/planning/path_generator/: CMakeLists.txt  package.xml
WUTA-FSD/ros2_ws/src/planning/path_generator/config/: path_generator.yaml
WUTA-FSD/ros2_ws/src/planning/path_generator/include/path_generator/: path_generator_node.hpp
WUTA-FSD/ros2_ws/src/planning/path_generator/src/: path_generator_node.cpp
WUTA-FSD/ros2_ws/src/system/mission_manager/: CMakeLists.txt  README.md  package.xml
WUTA-FSD/ros2_ws/src/system/mission_manager/include/mission_manager/: mission_manager.hpp
WUTA-FSD/ros2_ws/src/system/mission_manager/src/: mission_manager.cpp
WUTA-SIM/docs/: WUTA-FSD 仿真器开发方案.md  暑期加工计划.md
WUTA-SIM/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
WUTA-SIM/install/can_simulator/lib/can_simulator/: can_simulator
WUTA-SIM/install/can_simulator/share/can_simulator/: package.bash  package.dsv  package.sh  package.xml  package.zsh
WUTA-SIM/install/ins_simulator/lib/ins_simulator/: ins_simulator
WUTA-SIM/install/ins_simulator/share/ins_simulator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
WUTA-SIM/install/lidar_sim/lib/lidar_sim/: lidar_simulator_node
WUTA-SIM/log/: latest_build
WUTA-SIM/simulator_bringup/: README.md  package.xml  setup.cfg  setup.py
WUTA-SIM/simulator_bringup/docs/: development.md
WUTA-SIM/simulator_bringup/launch/: simulator.launch.py
WUTA-SIM/simulator_bringup/rviz/: wuta_simulator.rviz
WUTA-SIM/simulator_bringup/simulator_bringup/: __init__.py  simulation_bridge.py
WUTA-SIM/vehicle_model/src/vehicle_model/: package.xml  setup.cfg  setup.py
config/: simulator_defaults.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  ROS_INTERFACE.md
install/: local_setup.sh  setup.sh
install/autoware_msgs/share/autoware_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/can_simulator/share/can_simulator/: package.ps1  package.sh  package.xml
install/lidar_detection/share/lidar_detection/: package.bash  package.zsh
install/lidar_sim/lib/lidar_sim/: lidar_simulator_demo
install/lidar_sim/share/lidar_sim/: package.sh  package.xml
install/simulator_bringup/share/simulator_bringup/: package.sh  package.xml
install/vehicle_model/share/vehicle_model/: package.bash  package.sh  package.xml
install/wuta_msgs/share/wuta_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
(+847 files in other folders)
