<?xml version="1.0"?>
<package format="3">
  <name>wuta_tools</name>
  <version>1.0.0</version>
  <description>wuta_tools package for WUTA-FSD ROS2 stack</description>
  <maintainer email="wuta@todo.com">WUTA</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>wuta_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
