<?xml version="1.0"?>
<package format="3">
  <name>localization_manager</name>
  <version>1.0.0</version>
  <description>localization_manager package for WUTA-FSD ROS2 stack</description>
  <maintainer email="wuta@todo.com">WUTA</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wuta_msgs</depend>
  <exec_depend>kiss_icp</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
