<?xml version="1.0"?>
<package format="3">
  <name>ndt_localization</name>
  <version>1.0.0</version>
  <description>ndt_localization package for WUTA-FSD ROS2 stack</description>
  <maintainer email="wuta@todo.com">WUTA</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wuta_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libeigen3-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
